--- a/functions/template-node/package.json
+++ b/functions/template-node/package.json
@@ -1,4 +1,7 @@
 {
-    "name": "my-action",
-    "main": "index.js"
+  "name": "my-action",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 0"
   }
+}
