--- a/openfaas/Rakefile
+++ b/openfaas/Rakefile
@@ -3,8 +3,15 @@
 require 'pathname'
 require 'open3'
 
-task :publish, [:f] do |f: '*'|
-  desc 'publish a function file'
+desc 'build a function file'
+task :build, [:f] do |f: '*'|
+  Pathname.glob("#{f}.yml").each do |file|
+    sh 'faas-cli', 'build', '-f', file.to_s
+  end
+end
+
+desc 'publish a function file'
+task :publish, [:f] => :build do |f: '*'|
   Pathname.glob("#{f}.yml").each do |file|
     sh 'faas-cli', 'publish', '-f', file.to_s, '--platforms', 'linux/arm64,linux/arm,linux/amd64'
   end
