--- a/openfaas/stack.yml
+++ b/openfaas/stack.yml
@@ -3,14 +3,10 @@ provider:
   name: openfaas
   gateway: http://127.0.0.1:8080 # replace with OpenFaaS gateway address
 functions:
-  func-assemble:
+  template-python:
     lang: python3-http
-    handler: ../functions/func-assemble    
-    image: fedor89/func-assemble:latest    
+    handler: ../functions/template-python    
+    image: <dockerID>/template-python
 
-  func-split:
-    lang: python3-http
-    handler: ../functions/func-split    
-    image: fedor89/func-split:latest
 
   
