updated the stack.yml file

--- a/openfaas/stack.yml
+++ b/openfaas/stack.yml
@@ -4,7 +4,7 @@ provider:
   gateway: http://127.0.0.1:8080 # replace with OpenFaaS gateway address
 functions:
   template-python:
-    lang: python3-http
+    lang: python3-flask
     handler: ../functions/template-python    
     image: <dockerID>/template-python
 
